# bb-spec-kit

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  MCP_EVIDENCE_CHAIN.md  MCP_MANDATORY_SETUP.md  PLAN_CALL_CHAIN_ANALYSIS.md  PLAN_CALL_CHAIN_DIAGRAMS.md  PROJECT_ANALYSIS.md  README.md  SPECIFY_UPSTREAM_DOWNSTREAM_ANALYSIS.md  SSOT_REFACTOR_IMPLEMENTATION_PLAN.md  implementation_plan.md  pyproject.toml
.agents/: mcp-instructions.md
.claude/: instructions.md
.cursor/: instructions.md
.github/: copilot-instructions.md
.spec-workspace/: .gitignore  GETTING-STARTED.md  README.md
.spec-workspace/docs/: ARCHITECTURE.md  CHANGELOG.md  WORKFLOW.md
.spec-workspace/requirements/: REQUIREMENTS.md
.spec-workspace/sandbox/: README.md
.spec-workspace/tools/: generate-test.sh  sync-to-main.sh  (+1 more)
docs/: installation.md  local-development.md  quickstart.md  upgrade.md
extensions/: EXTENSION-API-REFERENCE.md
templates/: checklist-template.md  constitution-template.md  design-prototype-template.md  design-template.md  design-ui-template.md  design-ux-template.md  interface-detail-template.md  openapi-template.yaml  plan-template-EXT-002.md  plan-template.md  preview-template.html  spec-template-EXT-002.md  spec-template.md  tasks-template-EXT-002.md  tasks-template.md
tests/: test_agent_consistency.py  test_ai_skills.py  test_cline_agent.py  test_command_frontmatter_schema.py  test_cursor_frontmatter.py  test_extensions.py  test_init_agents.py  test_script_contracts.py  test_speckit_commands.py  test_template_structure_schema.py  test_uv_env.py
(+85 files in other folders)
